--- a/srcdocs/components/AmigaErrorBaundary/amigaerrorboundary.mdx
+++ b/srcdocs/components/AmigaErrorBaundary/amigaerrorboundary.mdx
@@ -6,13 +6,11 @@ menu: Components
 
 import { Playground, PropsTable } from 'docz'
 import AmigaErrorBoundary from '../../../src/components/AmigaErrorBoundary'
+import {AmigaErrorBoundaryExample} from './AmigaErrorBoundaryExample'
 
 # AmigaErrorBoundary
 
-
-## Props
-
-<PropsTable of={Toggle} />
+<AmigaErrorBoundaryExample />
 
 ## Playground
 
