--- a/srcdocs/components/AmigaErrorBaundary/amigaerrorboundary.mdx
+++ b/srcdocs/components/AmigaErrorBaundary/amigaerrorboundary.mdx
@@ -40,7 +40,7 @@ Click on the button `<>` on the right bottom of panel to edit your code.
 
 <Playground>
   <AmigaErrorBoundary show={false} error={"Hello, I'm error"}>
-    <p>Settru the show prop</p>
+    <p>Set true the show prop</p>
   </AmigaErrorBoundary>
 </Playground>
 
