--- a/srcdocs/getstarted.mdx
+++ b/srcdocs/getstarted.mdx
@@ -15,11 +15,11 @@ route: /
 You can use either **npm**
 
 ```bash
-npm i react-toggle-component
+npm i react-amiga-guru-meditation
 ```
 
 or **yarn**
 
 ```bash
-yarn add react-toggle-component
+yarn add react-amiga-guru-meditation
 ```
