--- a/srcdocs/components/AmigaErrorBaundary/amigaerrorboundary.mdx
+++ b/srcdocs/components/AmigaErrorBaundary/amigaerrorboundary.mdx
@@ -4,7 +4,7 @@ route: /components/amigaerrorboundary
 menu: Components
 ---
 
-import { Playground, Props } from 'docz'
+import { Playground, PropsTable } from 'docz'
 import AmigaErrorBoundary from '../../../src/components/AmigaErrorBoundary'
 import {AmigaErrorBoundaryExample} from './AmigaErrorBoundaryExample'
 
@@ -32,7 +32,7 @@ Of course, you may use it to display any catchable error in your children compon
 
 ## Props
 
-<Props of={AmigaErrorBoundary} />
+<PropsTable of={AmigaErrorBoundary} />
 
 ## Playground
 
